--- a/src/styles/_info.scss
+++ b/src/styles/_info.scss
@@ -5,21 +5,20 @@
   display: grid;
 
   grid-template-areas:
-    '.        .         '
-    'header   header    '
-    'ctaText  ctaButtons';
+    '.        .      .          .'
+    'header   header header     header'
+    '.      ctaText  ctaButtons .';
 
   grid-template-rows: clamp(75px, 10vh, 120px) clamp(100px, 30vh, 300px) auto;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 1fr min(50%, 750px) min(50%, 750px) 1fr;
 
   place-items: center;
 
   // Don't like putting this here
-  // overflow: visible;
+  overflow-x: visible;
+  overflow-y: auto;
   &,
   * {
-    overflow-y: auto;
-    overflow-x: visible;
     pointer-events: all;
     touch-action: all;
   }
@@ -116,7 +115,7 @@
   .labelDescription {
     width: 45ch;
     margin-bottom: 15px;
-    font-size: 1rem;
+    font-size: clamp(0.8rem, 0.8rem + 0.25vw, 1.3rem);
     font-weight: 200;
   }
 }
@@ -173,9 +172,11 @@
 }
 .closeBtn:before {
   transform: rotate(45deg);
+  box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.75);
 }
 .closeBtn:after {
   transform: rotate(-45deg);
+  box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.75);
 }
 
 @media screen and (max-width: 768px), (max-aspect-ratio: 1/1) {
